<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/corner_title"
        android:backgroundTint="@color/blueLight"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/number_converter_Title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/binary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edit_text_shape"
        android:digits="01"
        android:hint="@string/hint_binary_number"
        android:padding="@dimen/dimen12"
        android:paddingEnd="96dp"
        app:layout_constraintBottom_toTopOf="@+id/octal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/octal"
        style="@style/editTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="118dp"
        android:hint="@string/hint_octal_number"
        android:paddingEnd="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/binary"
        app:layout_constraintTop_toBottomOf="@+id/binary" />

    <EditText
        android:id="@+id/decimal"
        style="@style/editTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="91dp"
        android:hint="@string/hint_decimal_number"
        android:paddingEnd="77dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/octal"
        app:layout_constraintTop_toBottomOf="@+id/octal" />

    <EditText
        android:id="@+id/hexaDecimal"
        style="@style/editTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:hint="@string/hint_hexadecimal_number"
        android:inputType="number"
        android:paddingEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/decimal"
        app:layout_constraintTop_toBottomOf="@+id/decimal" />

    <Button
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/blueLight"
        android:padding="20dp"
        android:text="Result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reset_btn"
        app:layout_constraintTop_toBottomOf="@+id/hexaDecimal" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/blueLight"
        android:padding="21dp"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hexaDecimal"
        app:layout_constraintHorizontal_bias="0.5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>